# ayyygrad

./: .gitignore  README.md  pyproject.toml
agrad/: tensor.py
ayyygrad/: grad.py  ops.py  tensor.py  trace.py  util.py  value.py  viz.py
notebooks/: mnist.py  value.py
tests/: test_old_tensor.py  test_tensor.py  test_trace.py
