[tool.poetry]
name = "agrad"
version = "0.1.0"
description = "AUTOGRAD"
authors = ["Stefan Wong <stfnwong@gmail.com>"]
license = "NAY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
sympy = "^1.12"
graphviz = "^0.20.1"
jupyter = "^1.0.0"
jupytext = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3"
ipython = "^8.14.0"
pytest = "^7.4.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
